templates: Use handlebars templating
Signed-off-by: Raphiel Rollerscaperers <rapherion@raphielgang.org>

--- a/changelog/internal-dummy.tmpl
+++ b/changelog/internal-dummy.tmpl
@@ -1,3 +1,3 @@
-CONFIDENTIAL INTERNAL ONLY -- This is a confidential Furry-only OTA update to update your {{.Device}} with {{.Tag}} update.
+CONFIDENTIAL INTERNAL ONLY -- This is a confidential Furry-only OTA update to update your {{device}} with {{tag}} update.
 
-You may use your device normally but do not discuss or comment on this update externally. Send feedback to {{.DogfoodDiscuss}}. See {{.DogfoodURL}} for more info!
+You may use your device normally but do not discuss or comment on this update externally. Send feedback to {{dogfood_discuss}}. See {{dogfood_url}} for more info!
