--- a/changelog/beta-dummy.tmpl
+++ b/changelog/beta-dummy.tmpl
@@ -1,3 +1,3 @@
-This update will install a Beta version of hentaiOS {{.Codename}} ({{.Tag}}) on your device. This pre-release version may contains errors and defects that can affect normal functioning of your device. Downloading updates over cellular data or metered Wi-Fi networks may lead to additional charges.
+This update will install a Beta version of hentaiOS {{codename}} ({{tag}}) on your device. This pre-release version may contains errors and defects that can affect normal functioning of your device. Downloading updates over cellular data or metered Wi-Fi networks may lead to additional charges.
 
-To learn more about the hentaiOS Dogfood Program or Opt-out, visit [{{.DogfoodURL}}]({{.DogfoodURL}})
+To learn more about the hentaiOS Dogfood Program or Opt-out, visit [{{dogfood_url}}]({{dogfood_url}})
